change aboutIndex.html file name to about.html change homeIndex.html file name to Index.html

--- a/Lessons/lesson10,11/about.html
+++ b/Lessons/lesson10,11/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav class="nave">
-            <a href="home.html">Home</a>
+            <a href="Index.html">Home</a>
             <a href="#">About</a>
             <a href="#">Newest</a>
             <a href="#">Contact</a>
